sdks/novus-mundus-ts/tests/results/23-lifecycle-run7.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/23-lifecycle.test.ts:

[1m[34m━━━ Full Game Lifecycle - Setup ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Ready in 1.6s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.4s.
[36m  ▸ Admin: Creating castle[0m
[2m[onchain][0m [2m3SA5RMsKZu..[0m [36m⚡ CastleCreated[0m [2mcastle=CjJwhqmN.. castleName=TestCastle cityId=0 castleId=0 tier=0 timestamp=1770123599[0m
[2m[onchain][0m [2m3SA5RMsKZu..[0m [35mcreate castle[0m
[2m[onchain][0m [2m3SA5RMsKZu..[0m [33mTotal 4,064 / 200,000 CU[0m
[32m  ✓ Castle created[0m
[36m  ▸ Admin: Creating arena season[0m
[2m[onchain][0m [2m4MxAo9RzaN..[0m [36m⚡ KingdomArenaSeasonStarted[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. seasonId=0 startTime=1770123599 endTime=1770728399 prizePool=0[0m
[2m[onchain][0m [2m4MxAo9RzaN..[0m [35mcreate arena season[0m
[2m[onchain][0m [2m4MxAo9RzaN..[0m [33mTotal 7,313 / 200,000 CU[0m
[32m  ✓ Arena season created[0m
[36m  ▸ Admin: Creating dungeon template[0m
[2m[onchain][0m [2m5SMDEKXLEw..[0m [35mcreate dungeon template[0m
[2m[onchain][0m [2m5SMDEKXLEw..[0m [33mTotal 6,501 / 200,000 CU[0m
[32m  ✓ Dungeon template created[0m
[36m  ▸ Admin: Creating event[0m
[2m[onchain][0m [2m3ngka8yXg1..[0m [36m⚡ KingdomEventCreated[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. eventId=0 eventType=0 startTime=1770120001 endTime=1770210001 prizePool=10000[0m
[2m[onchain][0m [2m3ngka8yXg1..[0m [35mcreate event[0m
[2m[onchain][0m [2m3ngka8yXg1..[0m [33mTotal 5,359 / 200,000 CU[0m
[32m  ✓ Event created[0m
[36m  ▸ Admin: Creating bundle[0m
[2m[onchain][0m [2mHUh358XrfS..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mHUh358XrfS..[0m [35mcreate bundle[0m
[2m[onchain][0m [2mHUh358XrfS..[0m [33mTotal 281 / 200,000 CU[0m
[2m[onchain][0m [2mHUh358XrfS..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[33m  ⚠ Admin: createBundle[0m
[90m    Transaction HUh358XrfSySpcw4m3SqiX6TdoHGeFqnogZ72itDiTGduA4JAe3KA81XPe8TcqVwQ1vaFYVDsRcXdDqi7purAVk resulted in an error. [0m
[36m  ▸ Admin: Creating flash sale[0m
[2m[onchain][0m [2m2niaNZFtiB..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2niaNZFtiB..[0m [35mcreate flash sale[0m
[2m[onchain][0m [2m2niaNZFtiB..[0m [33mTotal 230 / 200,000 CU[0m
[2m[onchain][0m [2m2niaNZFtiB..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: insufficient account keys for instruction[0m
[33m  ⚠ Admin: createFlashSale[0m
[90m    Transaction 2niaNZFtiBcubNhdiZaRoBCtGQ81boTL2fchyrTk4hgJ55khyDXMSfzRyjTcJFTpwyg41CCPvyCwwTFq6iSEJxVT resulted in an error. [0m

[1m[34m━━━ Layer 1: Player Init ━━━[0m
[PlayerFactory] Initializing player 0 (city 0)
[2m[onchain][0m [2m274KakUjLH..[0m [36m⚡ UserCreated[0m [2muser=2GzaZXQS.. wallet=G9Qrv1ad.. timestamp=1770123602[0m
[2m[onchain][0m [2m274KakUjLH..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=8368TZj8.. owner=G9Qrv1ad.. joinedAt=1770123602[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35minit user[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m274KakUjLH..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35minit player[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m274KakUjLH..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m274KakUjLH..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m274KakUjLH..[0m [33mTotal 6,438 / 526,293 CU[0m
[PlayerFactory] Initializing player 1 (city 0)
[2m[onchain][0m [2m4xaPA8LgrS..[0m [36m⚡ UserCreated[0m [2muser=5HE6xRps.. wallet=78AzdeTP.. timestamp=1770123603[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=DTpJZyJQ.. owner=78AzdeTP.. joinedAt=1770123603[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35minit user[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35minit player[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m4xaPA8LgrS..[0m [33mTotal 4,938 / 513,820 CU[0m
[PlayerFactory] Initializing player 2 (city 2)
[2m[onchain][0m [2m4TDKtXau4C..[0m [36m⚡ UserCreated[0m [2muser=9at5bmZf.. wallet=FdZDUuCx.. timestamp=1770123604[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=G3A9Y3nc.. owner=FdZDUuCx.. joinedAt=1770123604[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35minit user[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35minit player[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m4TDKtXau4C..[0m [33mTotal 4,938 / 529,292 CU[0m
[PlayerFactory] Initializing player 3 (city 3)
[2m[onchain][0m [2mrhr1nUbiWK..[0m [36m⚡ UserCreated[0m [2muser=3hGTQ9FV.. wallet=8WD4WZvV.. timestamp=1770123605[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=6CQsHJ5Z.. owner=8WD4WZvV.. joinedAt=1770123605[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35minit user[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35minit player[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [35mcreate research progress[0m
[2m[onchain][0m [2mrhr1nUbiWK..[0m [33mTotal 4,938 / 515,791 CU[0m
[PlayerFactory] Initializing player 4 (city 4)
[2m[onchain][0m [2m8EC3SfxyiE..[0m [36m⚡ UserCreated[0m [2muser=4NuAhWiR.. wallet=65SYutaB.. timestamp=1770123606[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=4W13kdpe.. owner=65SYutaB.. joinedAt=1770123606[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35minit user[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35minit player[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m8EC3SfxyiE..[0m [33mTotal 4,938 / 508,293 CU[0m
[PlayerFactory] Initializing player 5 (city 0)
[2m[onchain][0m [2m4vEquAZrHm..[0m [36m⚡ UserCreated[0m [2muser=3ZJcpNxJ.. wallet=GBgayznw.. timestamp=1770123607[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=Brp9NHAg.. owner=GBgayznw.. joinedAt=1770123607[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35minit user[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35minit player[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m4vEquAZrHm..[0m [33mTotal 7,938 / 510,822 CU[0m
[32m  ✓ All 6 players initialized and verified[0m

[1m[34m━━━ Layer 2: Estate + Buildings ━━━[0m
[2m[onchain][0m [2m3JahpjyfjG..[0m [36m⚡ EstateCreated[0m [2mestate=2zEozDGn.. player=8368TZj8.. playerName=Player #1 timestamp=1770123608[0m
[2m[onchain][0m [2m3JahpjyfjG..[0m [36m⚡ ItemPurchased[0m [2mplayer=8368TZj8.. playerName=Player #1 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770123608[0m
[2m[onchain][0m [2m3JahpjyfjG..[0m [35mcreate estate[0m
[2m[onchain][0m [2m3JahpjyfjG..[0m [35mpurchase item[0m
[2m[onchain][0m [2m3JahpjyfjG..[0m [33mTotal 12,568 / 396,001 CU[0m
[2m[onchain][0m [2m265XMAcbVA..[0m [36m⚡ EstateCreated[0m [2mestate=CJVxU1P5.. player=DTpJZyJQ.. playerName=Player #2 timestamp=1770123608[0m
[2m[onchain][0m [2m265XMAcbVA..[0m [36m⚡ ItemPurchased[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770123608[0m
[2m[onchain][0m [2m265XMAcbVA..[0m [35mcreate estate[0m
[2m[onchain][0m [2m265XMAcbVA..[0m [35mpurchase item[0m
[2m[onchain][0m [2m265XMAcbVA..[0m [33mTotal 12,568 / 396,001 CU[0m
[2m[onchain][0m [2m3LUNU6VSiJ..[0m [36m⚡ EstateCreated[0m [2mestate=6zmWpktK.. player=G3A9Y3nc.. playerName=Player #3 timestamp=1770123609[0m
[2m[onchain][0m [2m3LUNU6VSiJ..[0m [36m⚡ ItemPurchased[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770123609[0m
[2m[onchain][0m [2m3LUNU6VSiJ..[0m [35mcreate estate[0m
[2m[onchain][0m [2m3LUNU6VSiJ..[0m [35mpurchase item[0m
[2m[onchain][0m [2m3LUNU6VSiJ..[0m [33mTotal 9,568 / 396,001 CU[0m
[2m[onchain][0m [2m5qnCb1owF6..[0m [36m⚡ EstateCreated[0m [2mestate=BG4gZFto.. player=6CQsHJ5Z.. playerName=Player #4 timestamp=1770123609[0m
[2m[onchain][0m [2m5qnCb1owF6..[0m [36m⚡ ItemPurchased[0m [2mplayer=6CQsHJ5Z.. playerName=Player #4 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770123609[0m
[2m[onchain][0m [2m5qnCb1owF6..[0m [35mcreate estate[0m
[2m[onchain][0m [2m5qnCb1owF6..[0m [35mpurchase item[0m
[2m[onchain][0m [2m5qnCb1owF6..[0m [33mTotal 14,068 / 396,001 CU[0m
[2m[onchain][0m [2m2GN7wYeQJ9..[0m [36m⚡ EstateCreated[0m [2mestate=BgfVFaur.. player=4W13kdpe.. playerName=Player #5 timestamp=1770123610[0m
[2m[onchain][0m [2m2GN7wYeQJ9..[0m [36m⚡ ItemPurchased[0m [2mplayer=4W13kdpe.. playerName=Player #5 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770123610[0m
[2m[onchain][0m [2m2GN7wYeQJ9..[0m [35mcreate estate[0m
[2m[onchain][0m [2m2GN7wYeQJ9..[0m [35mpurchase item[0m
[2m[onchain][0m [2m2GN7wYeQJ9..[0m [33mTotal 9,568 / 387,001 CU[0m
[2m[onchain][0m [2m3vGxtKpgRJ..[0m [36m⚡ EstateCreated[0m [2mestate=6sk4PbFP.. player=Brp9NHAg.. playerName=Player #6 timestamp=1770123610[0m
[2m[onchain][0m [2m3vGxtKpgRJ..[0m [36m⚡ ItemPurchased[0m [2mplayer=Brp9NHAg.. playerName=Player #6 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770123610[0m
[2m[onchain][0m [2m3vGxtKpgRJ..[0m [35mcreate estate[0m
[2m[onchain][0m [2m3vGxtKpgRJ..[0m [35mpurchase item[0m
[2m[onchain][0m [2m3vGxtKpgRJ..[0m [33mTotal 9,568 / 391,501 CU[0m
[32m  ✓ All estates created[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 plot=0 completesAt=1770138011 timestamp=1770123611[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 level=1 plot=0 timestamp=1770123611[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [35mcomplete building[0m
[2m[onchain][0m [2mpj1bQvzHSW..[0m [33mTotal 1,072 / 321,543 CU[0m
[32m  ✓ Alpha built Mansion[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 plot=1 completesAt=1770138012 timestamp=1770123612[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 level=1 plot=1 timestamp=1770123612[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2wuvxNJDqh..[0m [33mTotal 1,134 / 321,541 CU[0m
[32m  ✓ Alpha built Barracks[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=5 plot=2 completesAt=1770210014 timestamp=1770123614[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2m4TNfqtYX1R..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 5 needs split build...
[2m[onchain][0m [2m2TwvSx3oLM..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=5 plot=2 completesAt=1770210015 timestamp=1770123615[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2TwvSx3oLM..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2mWkdSNjCxVu..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mWkdSNjCxVu..[0m [35mcomplete building[0m
[2m[onchain][0m [2mWkdSNjCxVu..[0m [33mTotal 591 / 199,850 CU[0m
[2m[onchain][0m [2mWkdSNjCxVu..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m3UU5w1LUmJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3UU5w1LUmJ..[0m [33mTotal 10,209 / 199,850 CU[0m
[2m[onchain][0m [2m3Z8ujZSVNH..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3Z8ujZSVNH..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3Z8ujZSVNH..[0m [33mTotal 591 / 199,850 CU[0m
[2m[onchain][0m [2m3Z8ujZSVNH..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m3eLt4ozcbs..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3eLt4ozcbs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3eLt4ozcbs..[0m [33mTotal 9,795 / 199,850 CU[0m
[2m[onchain][0m [2m3eLt4ozcbs..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[2m[onchain][0m [2m5uUL9xwr85..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=5 level=1 plot=2 timestamp=1770123617[0m
[2m[onchain][0m [2m5uUL9xwr85..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5uUL9xwr85..[0m [33mTotal 1,184 / 199,850 CU[0m
[32m  ✓ Alpha built Forge[0m
[buildAndCompleteBuilding] Building 8 needs split build...
[2m[onchain][0m [2m3fUAfpQmrg..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=8 plot=3 completesAt=1770210019 timestamp=1770123619[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [33mTotal 611 / 321,423 CU[0m
[2m[onchain][0m [2m3fUAfpQmrg..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m273QvRUpat..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=8 plot=3 completesAt=1770210020 timestamp=1770123620[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m273QvRUpat..[0m [33mTotal 10,218 / 331,641 CU[0m
[2m[onchain][0m [2mRnjmUYBNWF..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mRnjmUYBNWF..[0m [35mcomplete building[0m
[2m[onchain][0m [2mRnjmUYBNWF..[0m [33mTotal 611 / 199,850 CU[0m
[2m[onchain][0m [2mRnjmUYBNWF..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m65Y91JApgF..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m65Y91JApgF..[0m [33mTotal 10,218 / 199,850 CU[0m
[2m[onchain][0m [2m43sY8DCr7h..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m43sY8DCr7h..[0m [35mcomplete building[0m
[2m[onchain][0m [2m43sY8DCr7h..[0m [33mTotal 611 / 199,850 CU[0m
[2m[onchain][0m [2m43sY8DCr7h..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m4QfjrvCnGB..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4QfjrvCnGB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4QfjrvCnGB..[0m [33mTotal 9,804 / 199,850 CU[0m
[2m[onchain][0m [2m4QfjrvCnGB..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[2m[onchain][0m [2m4bLqveRn3e..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=8 level=1 plot=3 timestamp=1770123622[0m
[2m[onchain][0m [2m4bLqveRn3e..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4bLqveRn3e..[0m [33mTotal 1,226 / 199,850 CU[0m
[32m  ✓ Alpha built Arena[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=0 plot=0 completesAt=1770138024 timestamp=1770123624[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=0 level=1 plot=0 timestamp=1770123624[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3iXMnAEyss..[0m [33mTotal 1,072 / 321,543 CU[0m
[2m[onchain][0m [2m46foot5obA..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=1 plot=1 completesAt=1770138026 timestamp=1770123626[0m
[2m[onchain][0m [2m46foot5obA..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=1 level=1 plot=1 timestamp=1770123626[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m46foot5obA..[0m [35mcomplete building[0m
[2m[onchain][0m [2m46foot5obA..[0m [33mTotal 1,134 / 321,541 CU[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=8 plot=2 completesAt=1770210028 timestamp=1770123628[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [35mcomplete building[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2mtc3eBj9z8F..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 8 needs split build...
[2m[onchain][0m [2m3GFmNHcaMe..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=8 plot=2 completesAt=1770210029 timestamp=1770123629[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3GFmNHcaMe..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2m2S3HSeH7VS..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2S3HSeH7VS..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2S3HSeH7VS..[0m [33mTotal 591 / 199,850 CU[0m
[2m[onchain][0m [2m2S3HSeH7VS..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m5G8VmVzcsF..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5G8VmVzcsF..[0m [33mTotal 10,209 / 199,850 CU[0m
[2m[onchain][0m [2m5JJ4V8wFnV..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m5JJ4V8wFnV..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5JJ4V8wFnV..[0m [33mTotal 591 / 199,850 CU[0m
[2m[onchain][0m [2m5JJ4V8wFnV..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m27GSugAcXk..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m27GSugAcXk..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m27GSugAcXk..[0m [33mTotal 9,795 / 199,850 CU[0m
[2m[onchain][0m [2m27GSugAcXk..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[2m[onchain][0m [2m2Vx2wZV6w1..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=8 level=1 plot=2 timestamp=1770123631[0m
[2m[onchain][0m [2m2Vx2wZV6w1..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2Vx2wZV6w1..[0m [33mTotal 1,183 / 199,850 CU[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [36m⚡ BuildingStarted[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 buildingType=0 plot=0 completesAt=1770138033 timestamp=1770123633[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [36m⚡ BuildingCompleted[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 buildingType=0 level=1 plot=0 timestamp=1770123633[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4vFXN4GQU2..[0m [33mTotal 1,072 / 342,543 CU[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [36m⚡ BuildingStarted[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 buildingType=1 plot=1 completesAt=1770138035 timestamp=1770123635[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [36m⚡ BuildingCompleted[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 buildingType=1 level=1 plot=1 timestamp=1770123635[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [35mcomplete building[0m
[2m[onchain][0m [2mpL2KEFXcK8..[0m [33mTotal 1,134 / 342,541 CU[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [36m⚡ BuildingStarted[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 buildingType=12 plot=2 completesAt=1770166837 timestamp=1770123637[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [33mTotal 591 / 342,488 CU[0m
[2m[onchain][0m [2m5tCELxV1QJ..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 12 needs split build...
[2m[onchain][0m [2m4LWxzXFHGK..[0m [36m⚡ BuildingStarted[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 buildingType=12 plot=2 completesAt=1770166837 timestamp=1770123637[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4LWxzXFHGK..[0m [33mTotal 7,209 / 349,697 CU[0m
[2m[onchain][0m [2m26MDKya5ZK..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m26MDKya5ZK..[0m [35mcomplete building[0m
[2m[onchain][0m [2m26MDKya5ZK..[0m [33mTotal 591 / 199,850 CU[0m
[2m[onchain][0m [2m26MDKya5ZK..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2mr9jdxXrapV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mr9jdxXrapV..[0m [33mTotal 7,193 / 199,850 CU[0m
[2m[onchain][0m [2m5FqUXF8YXE..[0m [36m⚡ BuildingCompleted[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 buildingType=12 level=1 plot=2 timestamp=1770123639[0m
[2m[onchain][0m [2m5FqUXF8YXE..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5FqUXF8YXE..[0m [33mTotal 1,198 / 199,850 CU[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [36m⚡ BuildingStarted[0m [2mplayer=6CQsHJ5Z.. playerName=Player #4 buildingType=0 plot=0 completesAt=1770138041 timestamp=1770123641[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [36m⚡ BuildingCompleted[0m [2mplayer=6CQsHJ5Z.. playerName=Player #4 buildingType=0 level=1 plot=0 timestamp=1770123641[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3RKnocMTkv..[0m [33mTotal 1,072 / 311,043 CU[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [36m⚡ BuildingStarted[0m [2mplayer=6CQsHJ5Z.. playerName=Player #4 buildingType=1 plot=1 completesAt=1770138043 timestamp=1770123643[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [36m⚡ BuildingCompleted[0m [2mplayer=6CQsHJ5Z.. playerName=Player #4 buildingType=1 level=1 plot=1 timestamp=1770123643[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [35mcomplete building[0m
[2m[onchain][0m [2mLBvRRrRnsv..[0m [33mTotal 1,134 / 311,041 CU[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [36m⚡ BuildingStarted[0m [2mplayer=4W13kdpe.. playerName=Player #5 buildingType=0 plot=0 completesAt=1770138045 timestamp=1770123645[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [36m⚡ BuildingCompleted[0m [2mplayer=4W13kdpe.. playerName=Player #5 buildingType=0 level=1 plot=0 timestamp=1770123645[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [35mcomplete building[0m
[2m[onchain][0m [2mjjmmpogTfw..[0m [33mTotal 1,072 / 279,543 CU[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [36m⚡ BuildingStarted[0m [2mplayer=4W13kdpe.. playerName=Player #5 buildingType=1 plot=1 completesAt=1770138047 timestamp=1770123647[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [36m⚡ BuildingCompleted[0m [2mplayer=4W13kdpe.. playerName=Player #5 buildingType=1 level=1 plot=1 timestamp=1770123647[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4kegNKHV57..[0m [33mTotal 1,134 / 279,541 CU[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [36m⚡ BuildingStarted[0m [2mplayer=4W13kdpe.. playerName=Player #5 buildingType=8 plot=2 completesAt=1770210049 timestamp=1770123649[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [33mTotal 591 / 279,488 CU[0m
[2m[onchain][0m [2m2Z5vncTR85..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 8 needs split build...
[2m[onchain][0m [2m616GPhvC7P..[0m [36m⚡ BuildingStarted[0m [2mplayer=4W13kdpe.. playerName=Player #5 buildingType=8 plot=2 completesAt=1770210049 timestamp=1770123649[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m616GPhvC7P..[0m [33mTotal 16,209 / 295,697 CU[0m
[2m[onchain][0m [2m2poEM1ibrv..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2poEM1ibrv..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2poEM1ibrv..[0m [33mTotal 591 / 199,850 CU[0m
[2m[onchain][0m [2m2poEM1ibrv..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m2U8VHtSvHY..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2U8VHtSvHY..[0m [33mTotal 16,209 / 199,850 CU[0m
[2m[onchain][0m [2m2X1SZrGP83..[0m [36m⚡ BuildingCompleted[0m [2mplayer=4W13kdpe.. playerName=Player #5 buildingType=8 level=1 plot=2 timestamp=1770123651[0m
[2m[onchain][0m [2m2X1SZrGP83..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2X1SZrGP83..[0m [33mTotal 1,183 / 199,850 CU[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [36m⚡ BuildingStarted[0m [2mplayer=Brp9NHAg.. playerName=Player #6 buildingType=0 plot=0 completesAt=1770138053 timestamp=1770123653[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [36m⚡ BuildingCompleted[0m [2mplayer=Brp9NHAg.. playerName=Player #6 buildingType=0 level=1 plot=0 timestamp=1770123653[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [35mcomplete building[0m
[2m[onchain][0m [2mjKHVHp7aGG..[0m [33mTotal 1,072 / 311,043 CU[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [36m⚡ BuildingStarted[0m [2mplayer=Brp9NHAg.. playerName=Player #6 buildingType=1 plot=1 completesAt=1770138055 timestamp=1770123655[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [36m⚡ BuildingCompleted[0m [2mplayer=Brp9NHAg.. playerName=Player #6 buildingType=1 level=1 plot=1 timestamp=1770123655[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5EXQnEKBV5..[0m [33mTotal 1,134 / 311,041 CU[0m
[32m  ✓ All buildings constructed[0m

[1m[34m━━━ Layer 3: Economy ━━━[0m
[2m[onchain][0m [2m4o4yWPZgi1..[0m [35mupdate locked novi[0m
[2m[onchain][0m [2m4o4yWPZgi1..[0m [33mTotal 536 / 200,000 CU[0m
[32m  ✓ Alpha: updateLockedNovi[0m
[2m  ℹ lockedNovi diff: none (fresh player)[0m
[36m  ▸ Hiring units for all players[0m
[2m[onchain][0m [2m5dnmZBLjTc..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=0 baseQuantity=42 finalQuantity=42 noviBurned=200 timeBonusBps=0 timestamp=1770123657[0m
[2m[onchain][0m [2m5dnmZBLjTc..[0m [35mhire units[0m
[2m[onchain][0m [2m5dnmZBLjTc..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5dnmZBLjTc..[0m [33mTotal 21,748 / 200,000 CU[0m
[2m[onchain][0m [2m2ZZRyKvn8A..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=1 baseQuantity=24 finalQuantity=24 noviBurned=100 timeBonusBps=0 timestamp=1770123658[0m
[2m[onchain][0m [2m2ZZRyKvn8A..[0m [35mhire units[0m
[2m[onchain][0m [2m2ZZRyKvn8A..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2ZZRyKvn8A..[0m [33mTotal 21,331 / 200,000 CU[0m
[2m[onchain][0m [2m26qHQKGctZ..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=3 baseQuantity=39 finalQuantity=39 noviBurned=200 timeBonusBps=0 timestamp=1770123658[0m
[2m[onchain][0m [2m26qHQKGctZ..[0m [35mhire units[0m
[2m[onchain][0m [2m26qHQKGctZ..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m26qHQKGctZ..[0m [33mTotal 21,279 / 200,000 CU[0m
[32m  ✓ Alpha: units hired[0m
[2m[onchain][0m [2mofhKNJKvFW..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=4 baseQuantity=24 finalQuantity=24 noviBurned=100 timeBonusBps=0 timestamp=1770123659[0m
[2m[onchain][0m [2mofhKNJKvFW..[0m [35mhire units[0m
[2m[onchain][0m [2mofhKNJKvFW..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mofhKNJKvFW..[0m [33mTotal 20,908 / 200,000 CU[0m
[2m[onchain][0m [2m51HL54mFnc..[0m [36m⚡ UnitsHired[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 unitType=0 baseQuantity=21 finalQuantity=21 noviBurned=100 timeBonusBps=0 timestamp=1770123659[0m
[2m[onchain][0m [2m51HL54mFnc..[0m [35mhire units[0m
[2m[onchain][0m [2m51HL54mFnc..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m51HL54mFnc..[0m [33mTotal 21,381 / 200,000 CU[0m
[2m[onchain][0m [2m5FiJ3ZJ7Av..[0m [36m⚡ UnitsHired[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 unitType=3 baseQuantity=10 finalQuantity=10 noviBurned=50 timeBonusBps=0 timestamp=1770123660[0m
[2m[onchain][0m [2m5FiJ3ZJ7Av..[0m [35mhire units[0m
[2m[onchain][0m [2m5FiJ3ZJ7Av..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5FiJ3ZJ7Av..[0m [33mTotal 20,180 / 200,000 CU[0m
[32m  ✓ Bravo: units hired[0m
[32m  ✓ Charlie: units hired[0m
[2m[onchain][0m [2m4m2Ar2S9U4..[0m [36m⚡ UnitsHired[0m [2mplayer=G3A9Y3nc.. playerName=Player #3 unitType=0 baseQuantity=11 finalQuantity=11 noviBurned=50 timeBonusBps=0 timestamp=1770123660[0m
[2m[onchain][0m [2m4m2Ar2S9U4..[0m [35mhire units[0m
[2m[onchain][0m [2m4m2Ar2S9U4..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4m2Ar2S9U4..[0m [33mTotal 17,655 / 200,000 CU[0m
[2m[onchain][0m [2m4wru6FaN8m..[0m [36m⚡ UnitsHired[0m [2mplayer=6CQsHJ5Z.. playerName=Player #4 unitType=0 baseQuantity=63 finalQuantity=63 noviBurned=300 timeBonusBps=0 timestamp=1770123661[0m
[2m[onchain][0m [2m4wru6FaN8m..[0m [35mhire units[0m
[2m[onchain][0m [2m4wru6FaN8m..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4wru6FaN8m..[0m [33mTotal 23,983 / 200,000 CU[0m
[2m[onchain][0m [2m2gHVYNZBp9..[0m [36m⚡ UnitsHired[0m [2mplayer=6CQsHJ5Z.. playerName=Player #4 unitType=1 baseQuantity=36 finalQuantity=36 noviBurned=150 timeBonusBps=0 timestamp=1770123661[0m
[2m[onchain][0m [2m2gHVYNZBp9..[0m [35mhire units[0m
[2m[onchain][0m [2m2gHVYNZBp9..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2gHVYNZBp9..[0m [33mTotal 22,833 / 200,000 CU[0m
[32m  ✓ Delta: units hired[0m
[2m[onchain][0m [2maX8VxYeZ6p..[0m [36m⚡ UnitsHired[0m [2mplayer=4W13kdpe.. playerName=Player #5 unitType=3 baseQuantity=32 finalQuantity=32 noviBurned=150 timeBonusBps=0 timestamp=1770123662[0m
[2m[onchain][0m [2maX8VxYeZ6p..[0m [35mhire units[0m
[2m[onchain][0m [2maX8VxYeZ6p..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2maX8VxYeZ6p..[0m [33mTotal 17,963 / 200,000 CU[0m
[32m  ✓ Echo: units hired[0m
[2m[onchain][0m [2m4qmdCUrsuH..[0m [36m⚡ UnitsHired[0m [2mplayer=4W13kdpe.. playerName=Player #5 unitType=0 baseQuantity=11 finalQuantity=11 noviBurned=50 timeBonusBps=0 timestamp=1770123662[0m
[2m[onchain][0m [2m4qmdCUrsuH..[0m [35mhire units[0m
[2m[onchain][0m [2m4qmdCUrsuH..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4qmdCUrsuH..[0m [33mTotal 17,653 / 200,000 CU[0m
[2m[onchain][0m [2m2UQXK3t2Ht..[0m [36m⚡ UnitsHired[0m [2mplayer=Brp9NHAg.. playerName=Player #6 unitType=0 baseQuantity=6 finalQuantity=6 noviBurned=30 timeBonusBps=0 timestamp=1770123663[0m
[2m[onchain][0m [2m2UQXK3t2Ht..[0m [35mhire units[0m
[2m[onchain][0m [2m2UQXK3t2Ht..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2UQXK3t2Ht..[0m [33mTotal 16,953 / 200,000 CU[0m
[32m  ✓ Foxtrot: units hired[0m
[2m[onchain][0m [2mTABF3Jkb9R..[0m [36m⚡ XpGained[0m [2mplayer=8368TZj8.. playerName=Player #1 amount=660 source=1 totalXp=310 timestamp=1770123663[0m
[2m[onchain][0m [2mTABF3Jkb9R..[0m [36m⚡ PlayerLeveledUp[0m [2mplayer=8368TZj8.. playerName=Player #1 oldLevel=1 newLevel=3 timestamp=1770123663[0m
[2m[onchain][0m [2mTABF3Jkb9R..[0m [36m⚡ ResourcesCollected[0m [2mplayer=8368TZj8.. playerName=Player #1 collectionType=0 noviConsumed=50 baseOutput=660858 finalOutput=660858 gemsEarned=0 fragmentsEarned=0 xpGained=660 timestamp=1770123663[0m
[2m[onchain][0m [2mTABF3Jkb9R..[0m [35mcollect resources[0m
[2m[onchain][0m [2mTABF3Jkb9R..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mTABF3Jkb9R..[0m [33mTotal 33,300 / 200,000 CU[0m
[2m  ℹ Cash change: "no change"[0m
[32m  ✓ Alpha: collectResources (cash)[0m
[33m  ⚠ Alpha: purchaseEquipment (known issue)[0m
[90m    Transaction 2gpMSZqFjFyr9G4J88cacDj2ubegctdzjFQrhYRS7aXpYvehvVvcWgkvXBJVYQpLfVHSERwLftwSiHscooQpG4Lj resulted in an error. [0m
[2m[onchain][0m [2m2gpMSZqFjF..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2gpMSZqFjF..[0m [35mpurchase equipment[0m
[2m[onchain][0m [2m2gpMSZqFjF..[0m [33mTotal 9,441 / 200,000 CU[0m
[2m[onchain][0m [2m2gpMSZqFjF..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e25[0m
[32m  ✓ Alpha: purchaseStamina[0m
[2m[onchain][0m [2m3PURC7RCzs..[0m [36m⚡ StaminaPurchased[0m [2mplayer=8368TZj8.. playerName=Player #1 stamina=0 gemsSpent=0 timestamp=1770123664[0m
[2m[onchain][0m [2m3PURC7RCzs..[0m [35mpurchase stamina[0m
[2m[onchain][0m [2m3PURC7RCzs..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3PURC7RCzs..[0m [33mTotal 6,859 / 200,000 CU[0m
[2m[onchain][0m [2m3RJE8N63jW..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3RJE8N63jW..[0m [35mvault transfer[0m
[2m[onchain][0m [2m3RJE8N63jW..[0m [33mTotal 362 / 200,000 CU[0m
[2m[onchain][0m [2m3RJE8N63jW..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e22[0m
[33m  ⚠ Alpha: vaultTransfer (needs Vault building)[0m
[90m    Transaction 3RJE8N63jWxV6n28P4QWSND6ua4fwwUWSzy8VVrzd7saQb3oUkAAL9oPQ2h1R1Njg2xygvqFKFfTPPrVHsg4jBP8 resulted in an error. [0m

[1m[34m━━━ Layer 4: Research ━━━[0m
[2m[onchain][0m [2m4ZQR3TmVte..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4ZQR3TmVte..[0m [35mstart research[0m
[2m[onchain][0m [2m4ZQR3TmVte..[0m [33mTotal 503 / 200,000 CU[0m
[2m[onchain][0m [2m4ZQR3TmVte..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e26[0m
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction 4ZQR3TmVteT3QxnHFBxdsFMefVBQ8mq1NBJ82PcNzVHudEoEWwn9rbZa4TVDYz7NMQ1FEC79wRkVc86cGfwG6FjG resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":7718}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "4ZQR3TmVteT3QxnHFBxdsFMefVBQ8mq1NBJ82PcNzVHudEoEWwn9rbZa4TVDYz7NMQ1FEC79wRkVc86cGfwG6FjG",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":7718}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
(fail) Full Game Lifecycle > runs the complete game lifecycle across all 24 systems [63809.53ms]

 0 pass
 1 fail
 18 expect() calls
Ran 1 tests across 1 files. [71.86s]
